force-app/main/default/objects/conversion1__c/conversion1__c.object-meta.xml
<CustomObject>
    <label>conversion1</label>
    <nameField>
        <label>conversion1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>conversion1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>