force-app/main/default/objects/conversion1__c/fields/Candidate_Status__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Status__c</fullName>
    <label>Candidate Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>