force-app/main/default/objects/conversion1__c/fields/conStatus__c.field-meta.xml
<CustomField>
    <fullName>conStatus__c</fullName>
    <label>conStatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>